--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "firebase": "^9.6.11",
+    "sass-loader": "^12.6.0",
     "uid": "^2.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.14",
